# li_battery_ws

./: README.md  battery_data_1.csv  csv_to_rosbag.py  description.md
battery_data_1.bag/: battery_data_1.bag_0.db3  metadata.yaml
install/: local_setup.sh  setup.sh
install/li_battery_diagnostic_module/share/li_battery_diagnostic_module/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/li_battery_diagnostic_module/share/li_battery_diagnostic_module/config/: battery_diagnostic.param.yaml
install/li_battery_diagnostic_module/share/li_battery_diagnostic_module/launch/: battery_diagnostic.launch.xml
src/: package.xml  setup.cfg  setup.py
src/Li_Battery_Diagnostic_Module/: CMakeLists.txt
src/Li_Battery_Diagnostic_Module/include/battery_diagnostic/: battery_diagnostic_core.hpp
src/Li_Battery_Diagnostic_Module/include/battery_diagnostic/diagnostic_algorithm/: battery_module.hpp  cell_voltage_analysis.hpp
src/Li_Battery_Diagnostic_Module/src/: battery_diagnostic_core.cpp
src/Li_Battery_Diagnostic_Module/src/diagnostic_algorithm/: battery_module.cpp  cell_voltage_analysis.cpp
src/config/: battery_diagnostic.param.yaml
src/launch/: battery_diagnostic.launch.xml
src/li_battery_diagnostic_module/: advanced_battery_diagnostic_node.py  battery_diagnostic_node.py  battery_module.py  cell_voltage_analysis.py
